[package]
name = "chess"
version = "1.0.0"
edition = "2021"
authors = ["Gabriel Lugo"]

[dependencies]
bevy = { version = "0.12.0" }
# bevy_asset_loader = { version = "0.17.0" }

serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }
strum = { version = "0.25", features = ["derive"] }
rusqlite = { version = "0.30" }
itertools = { version = "0.12.0" }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { version = "1.0" }
